--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@ html>
 
   <body>
 
-<div class="text-warning-emphasis bg-warning-subtle border-warning-subtle">Ismael Martinez</div>
-<div class="text-success-emphasis bg-success-subtle border-success-subtle">Alexis Lara
+<div class="text-success-emphasis bg-success-subtle border-success-subtle">Karen Valeria
 </div>
 <div class="text-primary-emphasis bg-primary-subtle border-primary-subtle">frida fernanda</div>
 
